--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Arun Kumar Gupta</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -400,7 +400,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/uber.jpg"
+                src="./assets/uber.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -461,7 +461,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/uber.jpg"
+                src="./assets/atliq sales.png"
                 alt="Project 4"
                 class="project-img"
               />
